# Flappy-Bird-Qt

./: BackAnimation.qml  Bird.qml  BoardText.qml  CMakeLists.txt  FontManager.cpp  FontManager.h  GameOverScreen.qml  GameScreen.qml  HomeScreen.qml  Main.qml  PauseScreen.qml  README.md  ReadyScreen.qml  SoundManager.qml  TemplateButton.qml  backend.cpp  backend.h  main.cpp
